fixed word overflow, fixed mobile view

--- a/src/components/pages/score/Score.css
+++ b/src/components/pages/score/Score.css
@@ -11,6 +11,7 @@
 
 .leaderboard-description{
     margin: 20px;
+    word-break: break-all;
 }
 
 .Leaderboard {
@@ -20,6 +21,8 @@
 .saghar{
     margin-top: 2%;
 }
+
+
 
 .titles {
     display: flex;
@@ -32,16 +35,16 @@
     font-weight: bold;
 }
 #name{
-    margin-left: 30px;
+    margin-left: 5%;
     width: 100px;
 }
 
 #score  {
-    margin-left: 70px;
+    margin-left: 16%;
     text-align: right;
 }
  #participantStats  {
-    margin-left: 70px;
+    margin-left: 15%;
     text-align: right;
     font-weight: bold;
 }
@@ -58,7 +61,7 @@ li {
 
 .log {
     margin-top: 60px;
-    margin-left: 20px;
+    /* margin-left: 20px; */
 }
 
 .Leaderboard>h1 {
@@ -116,19 +119,12 @@ h3 {
     }
 
     .Scorecard {
-        width: 90%;
+        width: 100%;
         border: 1px solid var(--ming);
     }
 
     .card-head {
         padding: 20px;
-    }
-
-    li {
-        display: flex;
-        flex-direction: row;
-        font-size: 10px;
-        padding: 0%;
     }
 
     .titles {
@@ -137,19 +133,18 @@ h3 {
         flex-direction: row;
     }
     
-    #participantHead{
+     #participantHead{
         font-size: 15px;
-        margin-left: 10px;
-        width: 110px;
+        margin-left: 8%;
+        /* width: 110px; */
         font-weight: bold;
-    }
+    } 
     #name{
-        margin-left: 10px;
         font-size: 10px;
     }
     
     #score  {
-        margin-left: 20px;
+        margin-left: 2%;
         text-align: right;
         font-size: 10px;
     }
@@ -158,7 +153,7 @@ h3 {
         margin-left: 10px;
         text-align: center;
         font-weight: bold;
-    }
+    } */
     .scores {
         margin: 10px;
     }
@@ -166,23 +161,17 @@ h3 {
         margin-top: 10px;
     }
 
-    .log input {
+    /* .log input {
         width: 20%;
-    }
-
-    .challenge p {
-        padding: 0%;
-        margin-left: 40px;
-    }
+    } */
 
     .cardHead {
         background-color: var(--MBG);
-    
     }
 
-    .log>h2 {
+    /* .log>h2 {
         font-size: var(--fs-14)
-    }
+    } */
 
     .cardBody{
         display:block;
@@ -201,5 +190,15 @@ h3 {
         height: 100%;
     
     }
+
+    .cardBody-information{
+        width: 100%;
+    }
+
+    .score li{
+        margin-right: 25px;;
+    }
+
+
 
 }
